// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List should apply custom className 1`] = `
<div>
  <ul
    class="list-disc pl-4 text-base sm:text-xl custom-class"
    data-testid="list-test-id"
  >
    <li
      class=""
    >
      Виконує бойові завдання у складі підрозділу, веде вогонь по противнику
    </li>
    <li
      class=""
    >
      Забезпечує прикриття товаришів під час бою
    </li>
    <li
      class=""
    >
      Контролює безпеку визначеної території
    </li>
  </ul>
</div>
`;

exports[`List should render correctly with circle bullet 1`] = `
<div>
  <ul
    class="list-disc pl-4 text-base sm:text-xl"
    data-testid="list-test-id"
  >
    <li
      class=""
    >
      Виконує бойові завдання у складі підрозділу, веде вогонь по противнику
    </li>
    <li
      class=""
    >
      Забезпечує прикриття товаришів під час бою
    </li>
    <li
      class=""
    >
      Контролює безпеку визначеної території
    </li>
  </ul>
</div>
`;

exports[`List should render correctly with default props 1`] = `
<div>
  <ul
    class="list-disc pl-4 text-base sm:text-xl"
    data-testid="list-test-id"
  >
    <li
      class=""
    >
      Виконує бойові завдання у складі підрозділу, веде вогонь по противнику
    </li>
    <li
      class=""
    >
      Забезпечує прикриття товаришів під час бою
    </li>
    <li
      class=""
    >
      Контролює безпеку визначеної території
    </li>
  </ul>
</div>
`;

exports[`List should render correctly with star bullet 1`] = `
<div>
  <ul
    class="flex flex-col gap-4 text-base sm:text-2xl"
    data-testid="list-test-id"
  >
    <li
      class="flex items-center gap-4 lining-nums tabular-nums"
    >
      <img
        alt="star icon"
        class="h-4 w-4 min-w-4 sm:h-6 sm:w-6 sm:min-w-6"
        data-nimg="1"
        data-testid="star-icon"
        decoding="async"
        height="24"
        loading="lazy"
        src="/icons/star.svg"
        style="color: transparent;"
        width="24"
      />
      Виконує бойові завдання у складі підрозділу, веде вогонь по противнику
    </li>
    <li
      class="flex items-center gap-4 lining-nums tabular-nums"
    >
      <img
        alt="star icon"
        class="h-4 w-4 min-w-4 sm:h-6 sm:w-6 sm:min-w-6"
        data-nimg="1"
        data-testid="star-icon"
        decoding="async"
        height="24"
        loading="lazy"
        src="/icons/star.svg"
        style="color: transparent;"
        width="24"
      />
      Забезпечує прикриття товаришів під час бою
    </li>
    <li
      class="flex items-center gap-4 lining-nums tabular-nums"
    >
      <img
        alt="star icon"
        class="h-4 w-4 min-w-4 sm:h-6 sm:w-6 sm:min-w-6"
        data-nimg="1"
        data-testid="star-icon"
        decoding="async"
        height="24"
        loading="lazy"
        src="/icons/star.svg"
        style="color: transparent;"
        width="24"
      />
      Контролює безпеку визначеної території
    </li>
  </ul>
</div>
`;

exports[`List should render correctly with star bullet and richText 1`] = `
<div>
  <ul
    class="flex flex-col gap-4 text-base sm:text-2xl"
    data-testid="list-test-id"
  >
    <li
      class="flex items-center gap-4 lining-nums tabular-nums"
    >
      <img
        alt="star icon"
        class="h-4 w-4 min-w-4 sm:h-6 sm:w-6 sm:min-w-6"
        data-nimg="1"
        data-testid="star-icon"
        decoding="async"
        height="24"
        loading="lazy"
        src="/icons/star.svg"
        style="color: transparent;"
        width="24"
      />
      <span>
        <span
          class="text-text-white font-bold"
        >
          Щомісячне грошове забезпечення
        </span>
        <span
          class="text-text-white font-normal"
        >
           — від 
        </span>
        <span
          class="text-text-green font-bold text-sm sm:text-xl"
        >
          20 000 
        </span>
        <span
          class="text-text-white font-normal"
        >
          грн для військових у тилу, до 
        </span>
        <span
          class="text-text-green font-bold text-sm sm:text-xl"
        >
          120 000 
        </span>
        <span
          class="text-text-white font-normal"
        >
          грн для тих, хто виконує завдання на передовій.
        </span>
      </span>
    </li>
    <li
      class="flex items-center gap-4 lining-nums tabular-nums"
    >
      <img
        alt="star icon"
        class="h-4 w-4 min-w-4 sm:h-6 sm:w-6 sm:min-w-6"
        data-nimg="1"
        data-testid="star-icon"
        decoding="async"
        height="24"
        loading="lazy"
        src="/icons/star.svg"
        style="color: transparent;"
        width="24"
      />
      <span>
        <span
          class="text-text-white font-bold"
        >
          Додаткові надбавки 
        </span>
        <span
          class="text-text-white font-normal"
        >
          за особливі умови служби, звання та спеціальність.
        </span>
      </span>
    </li>
    <li
      class="flex items-center gap-4 lining-nums tabular-nums"
    >
      <img
        alt="star icon"
        class="h-4 w-4 min-w-4 sm:h-6 sm:w-6 sm:min-w-6"
        data-nimg="1"
        data-testid="star-icon"
        decoding="async"
        height="24"
        loading="lazy"
        src="/icons/star.svg"
        style="color: transparent;"
        width="24"
      />
      <span>
        <span
          class="text-text-white font-bold"
        >
          Право на пенсійне забезпечення 
        </span>
        <span
          class="text-text-white font-normal"
        >
          після 
        </span>
        <span
          class="text-text-green font-bold text-sm sm:text-xl"
        >
          25 
        </span>
        <span
          class="text-text-green font-bold"
        >
          років 
        </span>
        <span
          class="text-text-white font-normal"
        >
          служби або за вислугою років.
        </span>
      </span>
    </li>
  </ul>
</div>
`;
